# hackirc

./: README.md  SPEC.md  project.clj
haskell/: Main.hs  hackirc.cabal
src/hackirc/: main.clj  server.clj
