name: hackirc
version: 0.1.0.0
cabal-version: >=1.8
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: lahaskell@elem.com
synopsis: hackirc server
category: Network
author: LA Haskell User Group
data-dir: ""

executable hackirc
    build-depends: base ==4.6.*, network -any
    buildable: True
    other-modules:
    main-is: Main.hs

