name: hackirc
version: 0.1.0.0
cabal-version: >=1.8
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: lahaskell@elem.com
synopsis: hackirc server
category: Network
author: LA Haskell User Group
data-dir: ""

executable hackirc
    build-depends: containers >=0.5.0.0 && <0.6, base ==4.6.*,
                   network -any, mtl -any
    main-is: Main.hs
    buildable: True

